--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -57,9 +57,21 @@ body {
 
 .iframe-placeholder
 {
-   background: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 100% 100%"><text fill="%23FF0000" x="50%" y="50%" font-family="\'Lucida Grande\', sans-serif" font-size="24" text-anchor="middle">LOADING</text></svg>') 0px 0px no-repeat;
+  width: 100vw;
+      height: 100vh;
+      width:100vw;
+      background:url(/img/loading.gif) center center no-repeat; 
+   /* background: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 100% 100%"><text fill="%23FF0000" x="50%" y="50%" font-family="\'Lucida Grande\', sans-serif" font-size="24" text-anchor="middle">LOADING</text></svg>') 0px 0px no-repeat; */
 }
-
+#loadingMessage {
+  width: 100vw;
+  height: 100vh;
+  z-index: 1000;
+  background: #ccc;
+  top: 0px;
+  left: 0px;
+  position: absolute;
+}
 
 .embed-responsive .btn {
   position: absolute;
