udpated links and footers

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,6 +25,6 @@
         </li>
         {% endif %}
       </ul>
-      <p class="text-muted small mb-0">Copyright &copy; ScopeLab 2020</p>
+      <p class="text-muted small mb-0">Copyright &copy; <a href="https://scopelab.ai">ScopeLab</a> 2020</p>
     </div>
   </footer>
