fixed semantic errors

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,7 @@
 {% include base_path %}
 
 <meta charset="utf-8">
+{% include seo.html %}
 {% include mathjax.html %}
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
