--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -14,9 +14,10 @@ layout: default
   {% endunless %}
 {% endif %}
 
+<main>
 <div class="container-fluid d-flex justify-content-center">
-<section class="content-section col-lg-12 col-xl-8  text-justify" itemprop="text">   {{ content }} </section>
+<div class="content-section col-lg-12 col-xl-8  text-justify">   {{ content }} </div>
 </div> 
- 
+ </main>
 
 
