--- a/_layouts/dashboard.html
+++ b/_layouts/dashboard.html
@@ -14,7 +14,7 @@ layout: compress
   <body id="page-top">
 
     {% include browser-upgrade.html %}
-    {% include masthead-dash.html %}
+    {% include masthead.html %}
 
     {{ content }}
 
