--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -14,7 +14,19 @@ body {
   font-family: 'Roboto';
   font-size: large;
 }
+table{
+  border-collapse: collapse;
+  border-spacing: 0;
+  border:2px solid #000000;
+}
 
+th{
+  border:2px solid #000000;
+}
+
+td{
+  border:1px solid #000000;
+}
 .btn-xl {
   padding: 1.25rem 2.5rem;
 }
