--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-12 masthead2">
       <h3 class="mdc-typography--headline3 p-2" ><a href="{{ base_path }}/">SmartTransit.ai </a>
-       - Optimizing Multi-modal Mixed Fleet Transit Operations</h3> 
+       <div class="d-none d-lg-inline">- Optimizing Multi-modal Mixed Fleet Transit Operations</div></h3> 
     </div>
 </div>
 </div>
