--- a/css/stylish-portfolio.scss
+++ b/css/stylish-portfolio.scss
@@ -66,6 +66,22 @@ td{
 
 }
 
+.text-card-justify{
+  white-space: pre;           /* CSS 2.0 */
+    white-space: pre-wrap;      /* CSS 2.1 */
+    white-space: pre-line;      /* CSS 3.0 */
+    white-space: -pre-wrap;     /* Opera 4-6 */
+    white-space: -o-pre-wrap;   /* Opera 7 */
+    white-space: -moz-pre-wrap; /* Mozilla */
+    white-space: -hp-pre-wrap;  /* HP Printers */
+    word-wrap: break-word;
+    -moz-hyphens:auto; 
+    -webkit-hyphens:auto; 
+    -o-hyphens:auto; 
+    hyphens:auto;
+    text-align: justify;   
+}
+
 .content-section{
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
