updates to text

--- a/css/stylish-portfolio.scss
+++ b/css/stylish-portfolio.scss
@@ -298,8 +298,8 @@ h6 {
   color:#ffff;
   background-color:rgba(0, 0, 0, 0.8);
   text-align:center;
-  top:40%;
-  bottom:auto;
+  top:auto;
+  bottom:0;
  
   }
 .sidebar-nav {
