--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -25,11 +25,11 @@
 <!-- end custom head snippets -->
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-178278850-1"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-178278850-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'UA-178278850-1');
-</script>
+</script> -->
