minor wording change

--- a/_sass/_bootstrap-overrides.scss
+++ b/_sass/_bootstrap-overrides.scss
@@ -18,6 +18,10 @@ a {
     border-color: darken($primary, 10%) !important;
   }
 }
+.content-section-heading{
+  margin-bottom: 15px;
+
+}
 .carousel-caption {
   top: 0;
   bottom: auto;
