--- a/_layouts/bibtemplate.html
+++ b/_layouts/bibtemplate.html
@@ -31,7 +31,7 @@
 <div id="a{{entry.key}}" class="content" style="display:none"><pre>{{entry.bibtex}}</pre></div>
 
 {% if entry.abstract %}
-<div id="abstract{{entry.key}}" class="content" style="display:none;background-color: #f5f5f5;font-family: Courier New, monospace;font-size: 0.9em;"><p></p>{{entry.abstract}}</p></div>
+<div id="abstract{{entry.key}}" class="content" style="display:none;background-color: #f5f5f5;font-family: Courier New, monospace;font-size: 0.9em;"><p class="m-2">{{entry.abstract}}</p></div>
 <script>
     function toggleAbstract{{entry.key}}(parameter) {
         var x= document.getElementById('abstract{{entry.key}}');
